Add tests to loan

--- a/modules/loan/view/contract_form.xml
+++ b/modules/loan/view/contract_form.xml
@@ -3,6 +3,7 @@
     <xpath expr="/form/notebook/page[@id='cov_elements']" position="after">
         <page id="loans" string="Loans"
             states="{'invisible': ~Eval('is_loan')}">
+            <button name="create_loan" string="Create Loan"/>
             <field name="loans" colspan="4"/>
         </page>
     </xpath>
