Add the possibility for a coverage to depend on another coverage for the coverage amount

--- a/modules/insurance_product/view/coverage_amount_rule_form.xml
+++ b/modules/insurance_product/view/coverage_amount_rule_form.xml
@@ -19,5 +19,8 @@
         <label name="amount_step"/>
         <field name="amount_step"/>
         <newline/>
+        <label name="other_coverage"/>
+        <field name="other_coverage"/>
+        <newline/>
     </xpath>
 </data>
