Add clause management / beneficiary clause management

--- a/modules/insurance_contract/view/contract_form.xml
+++ b/modules/insurance_contract/view/contract_form.xml
@@ -22,5 +22,8 @@
     <page string="Addresses" id="contract_adresses">
       <field name="addresses"/>
     </page>
+    <page string="Clauses" id="clauses">
+      <field name="clauses"/>
+    </page>
   </xpath>
 </data>
