--- a/modules/insurance_contract/view/covered_data_form.xml
+++ b/modules/insurance_contract/view/covered_data_form.xml
@@ -21,4 +21,6 @@
     <field name="currency"/>
     <newline/>
     <field name="complementary_data" colspan="2" no_command="1"/>
+    <newline/>
+    <field name="clauses" colspan="2"/>
 </form>
