--- a/modules/insurance_product/view/clause_tree.xml
+++ b/modules/insurance_product/view/clause_tree.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/tree/field[@name='current_rec_name']" position="replace"/>
-    <xpath expr="/tree" position="inside">
-        <field name="name"/>
-        <field name="code"/>
-        <field name="title"/>
-    </xpath>
+  <xpath expr="/tree/field[@name='current_rec_name']" position="replace"/>
+  <xpath expr="/tree" position="inside">
+    <field name="name"/>
+    <field name="code"/>
+    <field name="kind"/>
+    <field name="title"/>
+  </xpath>
 </data>
