--- a/modules/billing_individual/view/billing_manager_tree.xml
+++ b/modules/billing_individual/view/billing_manager_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Billing Managers">
+<tree string="Billing Datas">
   <field name="start_date"/>
   <field name="end_date"/>
   <field name="payment_method"/>
