--- a/modules/billing_individual/view/payment_rule_line_tree.xml
+++ b/modules/billing_individual/view/payment_rule_line_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Payment Rule Lines">
+<tree string="Payment Term Lines">
   <field name="type"/>
   <field name="percentage"/>
   <field name="amount"/>
