--- a/modules/billing_individual/view/payment_rule_tree.xml
+++ b/modules/billing_individual/view/payment_rule_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Payment Rules">
+<tree string="Payment Terms">
   <field name="name"/>
   <field name="code"/>
   <field name="payment_mode"/>
