--- a/modules/commission/view/compensated_option_form.xml
+++ b/modules/commission/view/compensated_option_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Compensated Option">
+<form string="Option-Commission Option Relation">
     <label name="start_date"/>
     <field name="start_date"/>
     <label name="end_date"/>
