--- a/modules/commission/view/compensated_option_tree.xml
+++ b/modules/commission/view/compensated_option_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Compensated Option">
+<tree string="Option-Commission Option Relation">
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="subs_option"/>
