--- a/modules/commission/view/option_form.xml
+++ b/modules/commission/view/option_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='status_history']" position="before">
-        <page string="Compensated Options" id="compensated_options"
+        <page string="Option-Commission Option Relations" id="compensated_options"
             states="{'invisible': Eval('coverage_kind') != 'commission'}">
             <field name="compensated_options" colspan="4"/>
         </page>
