--- a/modules/contract/view/delivered_service_form.xml
+++ b/modules/contract/view/delivered_service_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Delivered Service">
+<form string="Contract Service">
     <label name="status"/>
     <field name="status"/>
     <label name="func_error"/>
