--- a/modules/coop_process/view/process_parameters_form.xml
+++ b/modules/coop_process/view/process_parameters_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Process Parameters" col="4">
+<form string="Process Start" col="4">
   <label name="date"/>
   <field name="date" colspan="3"/>
   <label name="good_process"/>
