--- a/modules/health/view/party_complement_form.xml
+++ b/modules/health/view/party_complement_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Party Health Complement">
+<form string="Health Party Complement">
     <label name="party"/>
     <field name="party"/>
 </form>
