--- a/modules/health/view/party_complement_tree.xml
+++ b/modules/health/view/party_complement_tree.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Party Health Complement">
+<tree string="Health Party Complement">
     <field name="party"/>
 </tree>
