--- a/modules/health_fr/view/regime_tree.xml
+++ b/modules/health_fr/view/regime_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Regime">
+<tree string="Health Care System">
     <field name="code"/>
     <field name="short_name"/>
     <field name="name"/>
