--- a/modules/insurance_product/view/pricing_component_tree.xml
+++ b/modules/insurance_product/view/pricing_component_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Pricing Components">
+<tree string="Premium Rule Components">
     <field name="kind"/>
     <field name="code"/>
     <field name="config_kind"/>
