--- a/modules/insurance_product/view/compl_parameter_tree.xml
+++ b/modules/insurance_product/view/compl_parameter_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Rule Complementary Data" editable="bottom">
+<tree string="Rule Extra Data" editable="bottom">
   <field name="name"/>
   <field name="code"/>
   <field name="the_complementary_data"/>
