--- a/modules/insurance_product/view/letter_model_displayer_tree.xml
+++ b/modules/insurance_product/view/letter_model_displayer_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Letter Models" editable="bottom">
+<tree string="Document Templates" editable="bottom">
   <field name="selected"/>
   <field name="letter_model"/>
 </tree>
