--- a/modules/insurance_product/view/letter_model_selection_form.xml
+++ b/modules/insurance_product/view/letter_model_selection_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Letter Models">
+<form string="Document Templates">
     <field name="models" xexpand="1" xfill="1" yexpand="1" yfill="1" colspan="4"/>
     <newline/>
     <label name="good_address" xalign="0"/>
