--- a/modules/insurance_product/view/letter_model_tree.xml
+++ b/modules/insurance_product/view/letter_model_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Letter Models">
+<tree string="Document Templates">
   <field name="name"/>
   <field name="code"/>
   <field name="on_model"/>
