--- a/modules/insurance_product/view/pricing_component_form.xml
+++ b/modules/insurance_product/view/pricing_component_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Pricing Component">
+<form string="Premium Rule Component">
     <label name="kind"/>
     <field name="kind"/>
     <label name="rated_object_kind"/>
