--- a/modules/insurance_product/view/request_finder_form.xml
+++ b/modules/insurance_product/view/request_finder_form.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Request Finder">
+<form string="Document Receive Request">
     <label name="name"/>
 </form>
