--- a/modules/life_billing_collective_fr/view/rate_line_tree.xml
+++ b/modules/life_billing_collective_fr/view/rate_line_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Rate Line" editable="bottom">
+<tree string="Premium Rate Line" editable="bottom">
     <field name="rec_name"/>
     <field name="rate" factor="100">
         <suffix string="%"/>
