--- a/modules/life_billing_collective_fr/view/rate_note_selection_form.xml
+++ b/modules/life_billing_collective_fr/view/rate_note_selection_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Rate Note Selection">
+<form string="Billing Premium Rate Form Receive Select">
   <label name="selected_note"/>
   <field name="selected_note"/>
 </form>
