--- a/modules/life_billing_collective_fr/view/rating_rule_by_tranche_tree.xml
+++ b/modules/life_billing_collective_fr/view/rating_rule_by_tranche_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Tranche Rating Rule">
+<tree string="Salary Range Rating Rule">
     <field name="tranche"/>
     <field name="config_kind"/>
     <field name="simple_rate" factor="100">
