--- a/modules/life_billing_collective_fr/view/rating_rule_form.xml
+++ b/modules/life_billing_collective_fr/view/rating_rule_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form" position="replace_attributes">
-        <form string="Collective Rating Rule"/>
+        <form string="Premium Rate Rule"/>
     </xpath>
     <xpath expr="/form/label[@name='config_kind']" position="before">
         <label name="rating_kind"/>
