--- a/modules/life_product/view/salary_range_form.xml
+++ b/modules/life_product/view/salary_range_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form" position="replace_attributes">
-        <form string="Tranche"/>
+        <form string="Salary Range"/>
     </xpath>
     <xpath expr="/form/group[@id='basic data']" position="inside">
         <label name="name"/>
