--- a/modules/life_product/view/salary_range_version_form.xml
+++ b/modules/life_product/view/salary_range_version_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form" position="replace_attributes">
-        <form string="Tranche Version"/>
+        <form string="Salary Range Version"/>
     </xpath>
     <xpath expr="/form" position="inside">
         <label name="floor"/>
