--- a/modules/life_product/view/salary_range_version_tree.xml
+++ b/modules/life_product/view/salary_range_version_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/tree" position="replace_attributes">
-        <tree string="Tranche Version">
+        <tree string="Salary Range Version">
             <field name="floor"/>
             <field name="ceiling"/>
         </tree>
