--- a/modules/rule_engine/view/tree_element_form.xml
+++ b/modules/rule_engine/view/tree_element_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form string="Tree Element">
+<form string="Rule Function">
     <label name="description"/>
     <field name="description"/>
     <label name="parent"/>
