--- a/modules/rule_engine/view/tree_element_tree.xml
+++ b/modules/rule_engine/view/tree_element_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<tree string="Tree Element">
+<tree string="Rule Function">
     <field name="type"/>
     <field name="description"/>
     <field name="name"/>
