--- a/modules/offered/view/coverage_form.xml
+++ b/modules/offered/view/coverage_form.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
 <xpath expr="/form/notebook/page[@id='summary']" position="after">
-        <page string="Complementary Data" id="complementary_data">
+        <page string="Extra Data" id="complementary_data">
             <field name="complementary_data_def" colspan="4"/>
         </page>
     </xpath>
     <xpath expr="/form/notebook/page[@id='managers']" position="before">
-        <page string="Coverages" id="package"
+        <page string="OptionDescriptions" id="package"
             states="{'invisible': Bool(~Eval('is_package'))}">
             <field name="coverages_in_package"/>
         </page>
