--- a/modules/offered/view/extra_data_list.xml
+++ b/modules/offered/view/extra_data_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Complementary Data Descriptors">
+<tree string="Extra Data Descriptors">
     <field name="kind"/>
     <field name="string"/>
     <field name="type_"/>
