--- a/modules/offered/view/tag_form.xml
+++ b/modules/offered/view/tag_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook" position="inside">
-        <page id='compl_data' string='Complementary Data'>
+        <page id='compl_data' string='Extra Data'>
             <field name="compl_data_defs" colspan="4"/>
         </page>
     </xpath>
