--- a/modules/process/view/process_desc_tree.xml
+++ b/modules/process/view/process_desc_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Process Descriptors">
+<tree string="Processes">
   <field name="fancy_name"/>
   <field name="on_model"/>
   <field name="technical_name"/>
