--- a/modules/process/view/step_desc_form.xml
+++ b/modules/process/view/step_desc_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Step Descriptor">
+<form string="Process Step">
   <group id="global_part">
     <label name="fancy_name"/>
     <field name="fancy_name"/>
