--- a/modules/process/view/step_desc_tree.xml
+++ b/modules/process/view/step_desc_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Step Descriptors">
+<tree string="Process Steps">
 	<field name="fancy_name"/>
 	<field name="technical_name"/>
 </tree>
