--- a/modules/process/view/step_transition_form.xml
+++ b/modules/process/view/step_transition_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Step Transition Descriptor">
+<form string="Step Transition">
   <label name="from_step"/>
   <field name="from_step" colspan="3"/>
   <newline/>
