--- a/modules/offered_insurance/view/insurer_form.xml
+++ b/modules/offered_insurance/view/insurer_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form string="Insurer">
     <label name="party"/>
     <field name="party"/>
 </form>
