--- a/modules/commission/view/broker_form.xml
+++ b/modules/commission/view/broker_form.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
-  <label name="reference"/>
-  <field name="reference"/>
+<form string="Broker">
+    <label name="party"/>
+    <field name="party"/>
+    <label name="reference"/>
+    <field name="reference"/>
+    <field name="dist_networks" colspan="4"/>
 </form>
