Add dependency between coverages (CDE098)

--- a/modules/contract/view/wizard_option_tree.xml
+++ b/modules/contract/view/wizard_option_tree.xml
@@ -3,4 +3,5 @@
     <field name="is_selected"/>
     <field name="coverage"/>
     <field name="coverage_behaviour"/>
+    <field name="selection" tree_invisible="1"/>
 </tree>
