--- a/modules/commission/view/distribution_network_form.xml
+++ b/modules/commission/view/distribution_network_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook" position="inside">
-        <page id="com" string="Commissioning" cols="6">
+        <page id="com" string="Commissioning" col="6">
             <field name="commission_plans" colspan="2"/>
             <field name="parent_com_plans" colspan="2"/>
             <newline/>
