add only tree mode for offered.product-option relation

--- a/modules/offered/view/product_form.xml
+++ b/modules/offered/view/product_form.xml
@@ -14,7 +14,7 @@
             <field name="change_coverages_order"/>
             <newline/>
             <field name="coverages" colspan="4"/>
-            <field name="ordered_coverages" colspan="4"/>
+            <field name="ordered_coverages" colspan="4" mode="tree"/>
         </page>
     </xpath>
     <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']"
