Add recalculate button on rule engine test cases

--- a/modules/rule_engine/view/test_case_form.xml
+++ b/modules/rule_engine/view/test_case_form.xml
@@ -28,6 +28,7 @@
       </page>
     </notebook>
   </group>
+  <button string="Recalculate" name="recalculate"/>
   <label name="expected_result"/>
-  <field name="expected_result" colspan="3"/>
+  <field name="expected_result" colspan="2"/>
 </form>
