--- a/modules/table/view/dimension_value_form.xml
+++ b/modules/table/view/dimension_value_form.xml
@@ -3,6 +3,9 @@
     <label name="definition"/>
     <field name="definition"/>
     <newline/>
+    <label name="type"/>
+    <field name="type"/>
+    <newline/>
     <label name="sequence"/>
     <field name="sequence"/>
     <newline/>
@@ -20,5 +23,4 @@
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
-    <field name="type" invisible="1" colspan="4"/>
 </form>
