--- a/modules/table/view/dimension_value_list.xml
+++ b/modules/table/view/dimension_value_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<tree string="Table Definition Dimensions">
+<tree string="Table Definition Dimensions" editable="bottom">
     <field name="definition"/>
+    <field name="type"/>
     <field name="rec_name" expand="1"/>
-    <field name="type" tree_invisible="1"/>
 </tree>
