--- a/modules/table/view/table_2d_open_ask_dimensions_form.xml
+++ b/modules/table/view/table_2d_open_ask_dimensions_form.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Dimensions" col="2">
-  <label name="dimension3"/>
-  <field name="dimension3" widget="selection"/>
-  <label name="dimension4"/>
-  <field name="dimension4" widget="selection"/>
+    <field name="dimensions"/>
 </form>
