--- a/modules/table/view/table_definition_form.xml
+++ b/modules/table/view/table_definition_form.xml
@@ -10,40 +10,7 @@
     <label name="number_of_digits"/>
     <field name="number_of_digits"/>
   </group>
-  <group id="dim1" colspan="2" col="2" yfill="1" yexpand="1">
-    <label name="dimension_kind1"/>
-    <field name="dimension_kind1"/>
-    <label name="dimension_name1"/>
-    <field name="dimension_name1"/>
-    <group id="button" states="{'invisible': Eval('dimension_kind1', '') == ''}" colspan="2">
-      <button name="manage_dimension_1" string="Manage dimension 1" icon="tryton-go-jump"/>
-    </group>
-  </group>
-  <group id="dim2" colspan="2" col="2" yfill="1" yexpand="1">
-    <label name="dimension_kind2"/>
-    <field name="dimension_kind2"/>
-    <label name="dimension_name2"/>
-    <field name="dimension_name2"/>
-    <group id="button" states="{'invisible': Eval('dimension_kind2', '') == ''}" colspan="2">
-      <button name="manage_dimension_2" string="Manage dimension 2" icon="tryton-go-jump"/>
-    </group>
-  </group>
-  <group id="dim3" colspan="2" col="2" yfill="1" yexpand="1">
-    <label name="dimension_kind3"/>
-    <field name="dimension_kind3"/>
-    <label name="dimension_name3"/>
-    <field name="dimension_name3"/>
-    <group id="button" states="{'invisible': Eval('dimension_kind3', '') == ''}" colspan="2">
-      <button name="manage_dimension_3" string="Manage dimension 3" icon="tryton-go-jump"/>
-    </group>
-  </group>
-  <group id="dim4" colspan="2" col="2" yfill="1" yexpand="1">
-    <label name="dimension_kind4"/>
-    <field name="dimension_kind4"/>
-    <label name="dimension_name4"/>
-    <field name="dimension_name4"/>
-    <group id="button" states="{'invisible': Eval('dimension_kind4', '') == ''}" colspan="2">
-      <button name="manage_dimension_4" string="Manage dimension 4" icon="tryton-go-jump"/>
-    </group>
-  </group>
+  <field name="dimensions"/>
+  <newline/>
+  <button name="manage_dimension" string="Manage dimension"/>
 </form>
