--- a/modules/contract_life_process/view/covered_data_form.xml
+++ b/modules/contract_life_process/view/covered_data_form.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-  <xpath expr="/form/label[@name='coverage_amount']" position="replace"/>
-  <xpath expr="/form/field[@name='coverage_amount']" position="replace"/>
-  <xpath expr="/form/field[@name='covered_element']" position="after">
+  <xpath expr="/form/notebook/page[@id='main_data']/label[@name='coverage_amount']" position="replace"/>
+  <xpath expr="/form/notebook/page[@id='main_data']/field[@name='coverage_amount']" position="replace"/>
+  <xpath expr="/form/notebook/page[@id='main_data']/field[@name='covered_element']" position="after">
     <newline/>
     <label name="coverage_amount_selection"/>
     <field name="coverage_amount_selection"/>
@@ -15,10 +15,10 @@
     <field name="may_override_beneficiary_clause_text"/>
     <field name="possible_beneficiary_clauses"/>
   </xpath>
-  <xpath expr="/form" position="inside">
+  <xpath expr="/form/notebook/page[@id='main_data']" position="inside">
     <field name="with_coverage_amount"/>
   </xpath>
-  <xpath expr="/form/field[@name='clauses']" position="replace_attributes">
+  <xpath expr="/form/notebook/page[@id='main_data']/field[@name='clauses']" position="replace_attributes">
     <field name="clauses" invisible="1"/>
   </xpath>
 </data>
