--- a/modules/loan/view/covered_data_form.xml
+++ b/modules/loan/view/covered_data_form.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" ?>
+<?xml version="1.0"?>
 <data>
-    <xpath expr="/form" position="inside">
-        <newline/>
-        <field name="loan_shares" colspan="4"/>
-        <newline/>
-        <field name="is_loan"/>
-    </xpath>
+  <xpath expr="/form/notebook/page[@id='main_data']" position="inside">
+    <newline/>
+    <field name="loan_shares" colspan="4"/>
+    <newline/>
+    <field name="is_loan"/>
+  </xpath>
 </data>
