--- a/modules/offered_insurance/view/document_create_select_form.xml
+++ b/modules/offered_insurance/view/document_create_select_form.xml
@@ -3,6 +3,6 @@
     <field name="models" xexpand="1" xfill="1" yexpand="1" yfill="1" colspan="4"/>
     <newline/>
     <label name="good_address" xalign="0"/>
-    <field name="good_address" colspan="3"/>
+    <field name="good_address" colspan="3" widget='selection'/>
     <field name="party"/>
 </form>
