Various fixes on loan creation

--- a/modules/loan/view/loan_create_parameters_form.xml
+++ b/modules/loan/view/loan_create_parameters_form.xml
@@ -5,7 +5,7 @@
     <label name="rate"/>
     <group id="rate">
       <field name="rate" factor="100" xexpand="0"/>
-      <label string="%" id="rate" xexpand="0" xalign="0"/>
+      <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
     </group>
     <label name="amount"/>
     <group id="amount">
