--- a/modules/loan/view/loan_share_list.xml
+++ b/modules/loan/view/loan_share_list.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" ?>
 <tree editable="bottom">
-    <field name="share"/>
+    <field name="share" factor="100">
+        <suffix string="%"/>
+    </field>
     <field name="person"/>
     <field name="start_date"/>
     <field name="end_date"/>
