--- a/modules/billing_individual/view/computation_log_list.xml
+++ b/modules/billing_individual/view/computation_log_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Computation Logs">
+<tree string="Computation Logs" colors="If(Eval('level', 0) == 2, 'blue', 'black')">
   <field name="origin"/>
   <field name="start_date"/>
   <field name="end_date"/>
   <field name="base_amount"/>
   <field name="final_amount"/>
   <field name="ratio"/>
+  <field name='level' tree_invisible="1"/>
 </tree>
