--- a/modules/commission/view/breakdown_list.xml
+++ b/modules/commission/view/breakdown_list.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<data>
-  <xpath expr="/tree/field[@name='base_total']" position="after">
-    <field name="commissions" sum="Commissions"/>
-    <field name="total_base_com" sum="Total with coms"/>
-  </xpath>
-</data>
+<tree string="Breakdown">
+  <field name="start_date"/>
+  <field name="end_date"/>
+  <field name="base_total" sum="Base Amount"/>
+  <field name="commissions" sum="Commissions"/>
+  <field name="total_wo_fees" sum="Total w/o Fees"/>
+  <field name="fees" sum="Fees"/>
+  <field name="total_wo_taxes" sum="Total w/o taxes"/>
+  <field name="taxes" sum="Taxes"/>
+  <field name="total" sum="Total"/>
+</tree>
