--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Extra Premium">
   <label name="kind"/>
-  <field name="kind" colspan="3" widget="selection"/>
-  <label name="start_date"/>
-  <field name="start_date"/>
-  <label name="end_date"/>
-  <field name="end_date"/>
+  <field name="kind" widget="selection"/>
   <label name="calculation_kind"/>
   <field name="calculation_kind"/>
-  <newline/>
   <label name="flat_amount"/>
   <field name="flat_amount"/>
+  <newline/>
   <label name="rate"/>
   <group id="rate">
       <field name="rate" xexpand="0" factor="100"/>
       <label string="%" id="rate" xexpand="0" xalign="0"
         states="{'invisible': Eval('calculation_kind') != 'rate'}"/>
   </group>
+  <newline/>
+  <label name="start_date"/>
+  <field name="start_date"/>
+  <label name="end_date"/>
+  <field name="end_date"/>
 </form>
