--- a/modules/loan/view/contract_form.xml
+++ b/modules/loan/view/contract_form.xml
@@ -3,8 +3,13 @@
     <xpath expr="/form/notebook/page[@id='cov_elements']" position="after">
         <page id="loans" string="Loans"
             states="{'invisible': ~Eval('is_loan')}">
-            <button name="create_loan" string="Create Loan"/>
+            <button name="create_loan" string="Create Loan" colspan="4"/>
+            <newline/>
+            <label name="change_loans_order"/>
+            <field name="change_loans_order"/>
+            <newline/>
             <field name="loans" colspan="4"/>
+            <field name="loans_ordered" colspan="4"/>
         </page>
     </xpath>
 </data>
