--- a/modules/contract_insurance/view/contract_agreement_form.xml
+++ b/modules/contract_insurance/view/contract_agreement_form.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Manager">
+<form string="Manager" colspan="6">
   <label name="start_date"/>
   <field name="start_date"/>
   <label name="end_date"/>
   <field name="end_date"/>
+  <newline/>
   <label name="kind"/>
   <field name="kind"/>
+  <newline/>
   <label name="party"/>
   <field name="party"/>
+  <label name="agency"/>
+  <field name="agency"/>
   <label name="protocol"/>
   <field name="protocol"/>
   <newline/>
