--- a/modules/contract_insurance/view/contract_agreement_form.xml
+++ b/modules/contract_insurance/view/contract_agreement_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Manager" colspan="6">
+<form string="Manager" col="6">
   <label name="start_date"/>
   <field name="start_date"/>
   <label name="end_date"/>
