--- a/modules/loan/view/extra_premium_form.xml
+++ b/modules/loan/view/extra_premium_form.xml
@@ -8,4 +8,7 @@
       <label string="‰" id="capital_per_mil_rate" xexpand="0" xalign="0" states="{'invisible': Eval('calculation_kind') != 'capital_per_mil'}"/>
     </group>
   </xpath>
+  <xpath expr="/form" position="inside">
+    <field name="is_loan" invisible="1"/>
+  </xpath>
 </data>
