Add rec_name column on extra_premium view, rename kind to motive

--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Extra Premium">
-  <label name="kind"/>
-  <field name="kind" widget="selection"/>
+  <label name="motive"/>
+  <field name="motive" widget="selection"/>
   <label name="calculation_kind"/>
   <field name="calculation_kind"/>
   <label name="flat_amount"/>
