--- a/modules/contract_insurance/view/extra_premium_list.xml
+++ b/modules/contract_insurance/view/extra_premium_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Extra Premium">
-  <field name="kind"/>
-  <field name="calculation_kind"/>
+  <field name="rec_name"/>
+  <field name="motive"/>
   <field name="start_date"/>
   <field name="end_date"/>
   <button string="Propagate" name="propagate"/>
