Add option to be able to choose whether to calculate prices at loan_payment dates

--- a/modules/offered_insurance/view/product_form.xml
+++ b/modules/offered_insurance/view/product_form.xml
@@ -6,7 +6,7 @@
             <field name="item_descriptors"/>
         </page>
     </xpath>
-    <xpath expr="/form/notebook/page/notebook" position="inside">
+    <xpath expr="/form/notebook/page[@id='managers']/notebook" position="inside">
         <page string="Deductible" id="deductible"
             states="{'invisible': Eval('kind') != 'insurance'}">
             <field name="deductible_rules" colspan="4"/>
