Loan wizard simplification

--- a/modules/loan/view/loan_payment_tree.xml
+++ b/modules/loan/view/loan_payment_tree.xml
@@ -4,8 +4,8 @@
     <field name="number"/>
     <field name="start_date"/>
     <field name="begin_balance"/>
-    <field name="amount"/>
-    <field name="principal"/>
+    <field name="amount" sum="Total Amount"/>
+    <field name="principal" sum="Total Principal"/>
     <field name="interest" sum="Total Interest"/>
     <field name="end_balance"/>
 </tree>
