CDE149 Do not display billing data date when only one item

--- a/modules/billing_individual/view/billing_data_form.xml
+++ b/modules/billing_individual/view/billing_data_form.xml
@@ -16,4 +16,5 @@
     <field name="payment_mode"/>
     <field name="policy_owner"/>
     <field name="payment_date"/>
+    <field name="number_of_billing_data"/>
 </form>
