--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -18,7 +18,12 @@
   </group>
   <newline/>
   <label name="start_date"/>
-  <field name="start_date"/>
+  <group id="duration">
+    <field name="start_date"/>
+    <label name="duration"/>
+    <field name="duration" xexpand="0"/>
+    <field name="duration_unit" xexpand="0" xalign="0"/>
+  </group>
   <label name="end_date"/>
   <field name="end_date"/>
 <newline/>
