UI enhancements for option step in contract subscription

--- a/modules/contract_insurance/view/option_subscription.options_displayer_form.xml
+++ b/modules/contract_insurance/view/option_subscription.options_displayer_form.xml
@@ -8,5 +8,6 @@
     <label name="possible_covered_elements"/>
     <field name="possible_covered_elements"/>
     <newline/>
+    <field name="hide_covered_element"/>
     </xpath>
 </data>
