--- a/modules/loan/view/loan_form.xml
+++ b/modules/loan/view/loan_form.xml
@@ -3,11 +3,15 @@
   <notebook>
     <page id="main" string="Loan Create Parameters">
       <newline/>
+      <label name="order"/>
+      <field name="order"/>
+      <label name="contract"/>
+      <field name="contract"/>
+      <newline/>
       <label name="kind"/>
       <field name="kind"/>
-      <label name="rate"/>
-      <group id="rate" states="{
-            'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}">
+      <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
+      <group id="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}">
         <field name="rate" xexpand="0" factor="100"/>
         <label id="percent" string="%" xexpand="0" xalign="0"/>
       </group>
@@ -39,7 +43,6 @@
       <label name="defferal_duration"/>
       <field name="defferal_duration"/>
       <newline/>
-      <field name="contracts" colspan="4"/>
       <field name="loan_shares" colspan="4" mode="tree,form" view_ids="loan.loan_share_view_tree_editable,loan.loan_share_view_form"/>
     </page>
     <page id="increments" string="Increments">
