--- a/modules/loan/view/loan_simple_form.xml
+++ b/modules/loan/view/loan_simple_form.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Loan Create Parameters">
+<form string="Loan Create Parameters" cursor="kind">
+    <label name="order"/>
+    <field name="order"/>
+    <newline/>
     <label name="kind"/>
     <field name="kind"/>
-    <label name="rate"/>
-    <group id="rate">
-      <field name="rate" factor="100" xexpand="0"/>
-      <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
+    <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
+    <group id="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}">
+        <field name="rate" factor="100" xexpand="0"/>
+        <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
     </group>
+    <newline/>
     <label name="amount"/>
     <group id="amount">
         <field name="amount" xexpand="0"/>
@@ -15,26 +19,26 @@
     <newline/>
     <label name="number_of_payments"/>
     <group id="frequency">
-        <field name="number_of_payments" xexpand="0"/>
-        <field name="payment_frequency" xexpand="0" xalign="0"/>
+        <field name="number_of_payments"/>
+        <field name="payment_frequency"/>
     </group>
     <label name="payment_amount"/>
     <group id="payment_amount">
         <field name="payment_amount" xexpand="0"/>
         <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
     </group>
-    <label name="defferal"/>
-    <field name="defferal"/>
-    <label name="defferal_duration"/>
-    <field name="defferal_duration"/>
     <label name="funds_release_date"/>
     <field name="funds_release_date"/>
     <label name="first_payment_date"/>
     <field name="first_payment_date"/>
+    <label name="defferal"/>
+    <field name="defferal"/>
+    <label name="defferal_duration"/>
+    <field name="defferal_duration"/>
     <newline/>
     <field name="currency"/>
-    <newline/>
-    <group id='contracts' states="{'invisible': True}">
-        <field name="contracts"/>
+    <group id="contract" states="{'invisible': True}">
+        <field name="contract"/>
     </group>
+    <newline/>
 </form>
