--- a/modules/clause/view/clause_list.xml
+++ b/modules/clause/view/clause_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Clauses">
-  <field name="clause"/>
+  <field name="name"/>
+  <field name="code"/>
   <field name="kind"/>
-  <field name="override_text"/>
 </tree>
