--- a/modules/contract_insurance_clause/view/covered_data_form.xml
+++ b/modules/contract_insurance_clause/view/covered_data_form.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-  <xpath expr="/form/notebook/page[@id='main_data']/field[@name='extra_data']" position="after">
-    <newline/>
-    <field name="clauses" colspan="2"/>
+  <xpath expr="/form/notebook" position="inside">
+    <page string="Clauses" id="clauses">
+      <field name="clauses"/>
+    </page>
   </xpath>
 </data>
