--- a/modules/loan/view/loan_simple_form.xml
+++ b/modules/loan/view/loan_simple_form.xml
@@ -6,15 +6,21 @@
     <label name="kind"/>
     <field name="kind"/>
     <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
-    <group id="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}">
+    <group id="rate">
         <field name="rate" factor="100" xexpand="0"/>
-        <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
+        <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
     </group>
     <newline/>
     <label name="amount"/>
     <group id="amount">
         <field name="amount" xexpand="0"/>
-        <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+        <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'leasing'}"/>
+    </group>
+    <newline/>
+    <label name="first_payment_amount"/>
+    <group id="first_payment_amount">
+        <field name="first_payment_amount" xexpand="0"/>
+        <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') != 'leasing'}"/>
     </group>
     <newline/>
     <label name="number_of_payments"/>
@@ -27,6 +33,12 @@
         <field name="payment_amount" xexpand="0"/>
         <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
     </group>
+    <label name="last_payment_amount"/>
+    <group id="last_payment_amount">
+        <field name="last_payment_amount" xexpand="0"/>
+        <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') != 'leasing'}"/>
+    </group>
+    <newline/>
     <label name="funds_release_date"/>
     <field name="funds_release_date"/>
     <label name="first_payment_date"/>
