--- a/modules/debug/view/field_info_list.xml
+++ b/modules/debug/view/field_info_list.xml
@@ -2,7 +2,9 @@
 <tree string="Fields">
   <field name="name"/>
   <field name="string"/>
-  <field name="is_function"/>
   <field name="kind"/>
-  <field name="target_model"/>
+  <field name="is_function"/>
+  <field name="is_required"/>
+  <field name="is_readonly"/>
+  <field name="is_invisible"/>
 </tree>
