Fix comments from PR and full support for fully deferal payment

--- a/modules/loan/view/loan_form.xml
+++ b/modules/loan/view/loan_form.xml
@@ -10,10 +10,10 @@
       <newline/>
       <label name="kind"/>
       <field name="kind"/>
-      <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
+      <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate', 'balloon'])}"/>
       <group id="rate">
           <field name="rate" factor="100" xexpand="0"/>
-          <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
+          <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate', 'balloon'])}"/>
       </group>
       <newline/>
       <label name="amount"/>
@@ -36,7 +36,7 @@
       <label name="payment_amount"/>
       <group id="payment_amount">
           <field name="payment_amount" xexpand="0"/>
-          <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
+          <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Or(Eval('kind') == 'graduated', ~~Eval('deferal'))}"/>
       </group>
       <label name="last_payment_amount"/>
       <group id="last_payment_amount">
@@ -48,10 +48,10 @@
       <field name="funds_release_date"/>
       <label name="first_payment_date"/>
       <field name="first_payment_date"/>
-      <label name="defferal"/>
-      <field name="defferal"/>
-      <label name="defferal_duration"/>
-      <field name="defferal_duration"/>
+      <label name="deferal"/>
+      <field name="deferal"/>
+      <label name="deferal_duration"/>
+      <field name="deferal_duration"/>
       <newline/>
       <field name="loan_shares" colspan="4" mode="tree,form" view_ids="loan.loan_share_view_tree_editable,loan.loan_share_view_form"/>
     </page>
