--- a/modules/loan/view/loan_simple_form.xml
+++ b/modules/loan/view/loan_simple_form.xml
@@ -5,10 +5,10 @@
     <newline/>
     <label name="kind"/>
     <field name="kind"/>
-    <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
+    <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate', 'balloon'])}"/>
     <group id="rate">
         <field name="rate" factor="100" xexpand="0"/>
-        <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate'])}"/>
+        <label string="%" id="rate" xexpand="0" xalign="0" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate', 'balloon'])}"/>
     </group>
     <newline/>
     <label name="amount"/>
@@ -31,7 +31,7 @@
     <label name="payment_amount"/>
     <group id="payment_amount">
         <field name="payment_amount" xexpand="0"/>
-        <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'graduated'}"/>
+        <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Or(Eval('kind') == 'graduated', ~~Eval('deferal'))}"/>
     </group>
     <label name="last_payment_amount"/>
     <group id="last_payment_amount">
@@ -43,10 +43,10 @@
     <field name="funds_release_date"/>
     <label name="first_payment_date"/>
     <field name="first_payment_date"/>
-    <label name="defferal"/>
-    <field name="defferal"/>
-    <label name="defferal_duration"/>
-    <field name="defferal_duration"/>
+    <label name="deferal"/>
+    <field name="deferal"/>
+    <label name="deferal_duration"/>
+    <field name="deferal_duration"/>
     <newline/>
     <field name="currency"/>
     <group id="contract" states="{'invisible': True}">
