--- a/modules/loan/view/loan_increment_tree.xml
+++ b/modules/loan/view/loan_increment_tree.xml
@@ -2,9 +2,10 @@
 <tree string="Loan Increments" editable="bottom">
     <field name="number"/>
     <field name="start_date"/>
+    <field name="begin_balance"/>
     <field name="number_of_payments"/>
     <field name="end_date"/>
-    <field name="defferal"/>
+    <field name="deferal"/>
     <field name="rate" factor="100">
         <suffix string="%"/>
     </field>
