--- a/modules/contract_life_clause/view/beneficiary_list.xml
+++ b/modules/contract_life_clause/view/beneficiary_list.xml
@@ -2,5 +2,5 @@
 <tree string="Beneficiaries">
   <field name="accepting"/>
   <field name="share" factor="100"/>
-  <field name="beneficiary_description"/>
+  <field name="description"/>
 </tree>
